Fix icon, fix installer, tweak settings